--- a/InputOverlay/InputOverlay.csproj
+++ b/InputOverlay/InputOverlay.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Model\Declerations\MessageWindow.cs" />
     <Compile Include="Model\KeyActivityEventArgs.cs" />
     <Compile Include="Model\KeyInterceptor.cs" />
+    <Compile Include="View\OverlayForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\OverlayForm.Designer.cs">
+      <DependentUpon>OverlayForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Test.cs">
       <SubType>Form</SubType>
     </Compile>
