Replaced Queue with a more appropriate data structure wit ha constant size that automatically overwrites the oldest values when new values are enqueued.
Moved the history to the model where it should be!

Introduced KeyActivity to the KeyActivityEventArgs which carries info
about the latest keypress (key code and whether it was
[syskey](up/down))

Moved some external definitions to a new struct in RawInput.

--- a/InputOverlay/InputOverlay.csproj
+++ b/InputOverlay/InputOverlay.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataStructures\RingBuffer.cs" />
+    <Compile Include="Model\KeyActivity.cs" />
     <Compile Include="View\HistoryTest.cs">
       <SubType>Form</SubType>
     </Compile>
